<resources>
    <string name="app_name">Steps4Impact</string>
    <string name="app_name_title">Steps 4 Impact</string>
    <string name="facebook_application_id" translatable="false">246679025737864</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb246679025737864</string>
    <string name="debug_facebook_app_id">952254615120365</string>
    <string name="release_facebook_app_id">246679025737864</string>
    <string name="facebook_Steps4Impact_group_id">466564417434674</string>
    <string name="release_fitbit_client_id">22B4MM</string>
    <string name="debug_fitbit_client_id">22CZ2W</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_challenge">Challenge</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="leaderboard_empty_message">Check back for global team rankings</string>
    <string name="gold_medal_label">1</string>
    <string name="silver_medal_label">2</string>
    <string name="bronze_medal_label">3</string>
    <string-array name="leaderboard_sort_types">
        <item>Miles</item>
        <item>Alphabetic(A-Z)</item>
        <item>Alphabetic(Z-A)</item>
    </string-array>
    <string name="nav_notifications">Notifications</string>
    <string name="notifications_data_error">Notifications Error</string>
    <string name="notification_empty_message">You don\'t have any notifications right now</string>
    <string name="akf_profileview_title">AKF Profile</string>
    <string name="login_id_not_found">Login data not found. Please login or contact the support team for assistance</string>
    <string name="team_card_join_create_team_mesage">Participating in a challenge is always more fun with friends! </string>
    <string name="team_card_show_teams_to_join_button_text">Join an Existing Team</string>
    <string name="team_card_create_team_button_text">Create a New Team</string>
    <string name="team_card_join_team_button_text">Join Team</string>
    <string name="team_card_cancel_button_text">Cancel</string>
    <string name="onboard_welcome_headline">Welcome to</string>
    <string name="onboard_welcome_byline">Thanks for registering!</string>
    <string name="onboard_welcome_start">Tap continue for a quick tour of the app.</string>
    <string name="button_continue_label">Continue</string>
    <string name="onboard_welcome_skip">Skip</string>
    <string name="welcome_to_app">Welcome to Steps 4 Impact</string>
    <string-array name="onboard_tutorial_step_title">
        <item>Create a team or join an existing team</item>
        <item>Complete a challenge while reaching milestones</item>
        <item>Track your progress using the dashboard </item>
    </string-array>
    <string-array name="onboard_tutorial_step_button_title">
        <item>Continue</item>
        <item>Continue</item>
        <item>Lets Begin!</item>
    </string-array>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="settings_title">Settings</string>
    <string name="settings_participant_miles_label">Personal mile commitment</string>
    <string name="settings_participant_miles_units_label">miles</string>
    <string name="settings_participant_miles_message">Mile commitment cannot be changed once the challenge has started.</string>
    <string name="settings_participant_push_enabled_label">Push notifications</string>
    <string name="settings_participant_connect_app_device_label">Connected app or device</string>
    <string name="settings_section_personal">Personal</string>
    <string name="settings_section_team">Team</string>
    <string name="settings_team_public_visibility_on_message">Your team is discoverable. Any participant can find and join your team.</string>
    <string name="settings_team_public_visibility_off_message">Your team is invite-only. Turn on team visibility to allow anyone to find and join your team.</string>
    <string name="settings_participant_akf_create_profile_label">Create Aga Khan Foundation \(AKF\) Profile</string>
    <string name="connecting_to_fitness_device">Connecting the app to your Fitbit Account</string>
    <string name="connected_to_fitness_device">Connected the app to your Fitbit Account</string>
    <string name="disconnected_from_fitness_device">Disconnected the app from your Fitbit Account</string>
    <string name="connect_device_or_app_message">No activity yet. You will need to connect a fitness tracker to track your miles.</string>
    <string name="connect_device_app_button_text">Connect an App or a Device</string>
    <string name="settings_connect_device_title">Connected Apps &amp; Devices</string>
    <string name="settings_connect_label_fitness_app">Fitness App</string>
    <string name="settings_fitness_app_connect_label">Connect</string>
    <string name="settings_fitness_app_disconnect_label">Disconnect</string>
    <string name="settings_fitness_app_connect_message">Connect a fitness app to track your daily steps.</string>
    <string name="settings_connect_label_fitness_device">Fitbit</string>
    <string name="settings_fitness_device_connect_label">Connect</string>
    <string name="settings_fitness_device_disconnect_label">Disconnect</string>
    <string name="settings_fitness_device_connect_message">Connect your Fitbit to sync your daily steps.</string>
    <string name="tracker_needs_reconnection">\n\nError while retrieving steps data.\n\nCheck network connection and try again. If error is not resolved, please go to the Settings, disconnect and reconnect your tracker</string>
    <string name="tracker_connection_check_needs_reconnection">\n\nTracker not connected. Please go to the Settings, disconnect and reconnect your tracker and try again.</string>
    <string name="tracker_connection_check_error">\n\nTracker connection error.\n\nCheck network connection and try again. If error is not resolved, please go to the Settings, disconnect and reconnect your tracker</string>
    <string name="fitbit_connection_error_message">\n\n\Fitbit connection error:\n\n%1$s</string>
    <string name="tracker_connection_title_template">%1$s Connection Error</string>
    <string name="connected_to_fitness_app_message">Connected to Google Fit account on Your device</string>
    <string name="google_fit_connection_error_message">\n\n\Google fit connection error:\n\n%1$s</string>
    <string name="disconnected_from_fitness_app_message">Disconnected from Google Fit account on Your device</string>
    <string name="google_fit_permission_rationale">Permission is required to access your Google Fit data</string>
    <string name="google_fit_permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings_team_membership_title">Team</string>
    <string name="content_description_team_photo">Team photo</string>
    <string name="content_description_participant_photo">Participant photo</string>
    <string name="signout">Logout</string>
    <string name="data_error">Data retrieval error</string>
    <string name="events_list_retrieval_error">Could not retrieve events data. Please check network and try again later</string>
    <string name="events_list_not_setup_error">Server data has not been setup yet. Please try again later</string>
    <string name="events_not_selected_error">Event not selected. Please try again later</string>
    <string name="participant_data_not_loaded_error">Error loading data. Please try again.</string>
    <string name="leaderboard_data_error">Leaderboard Error</string>
    <string name="events_data_error">Challenge Error</string>
    <string name="teams_data_error">Teams Error</string>
    <string name="participants_data_error">Participants Error</string>
    <string name="participant_team_join_error">Unable to assign to team</string>
    <string name="team_created_but_participant_team_join_error">Team created but unable to add participant to the team. Please use the JOIN TEAM option</string>
    <string name="teams_list_retrieval_error">Could not retrieve teams list</string>
    <string name="journey_starts_today">Your journey starts today</string>
    <string name="dashboard_activity_card_label">Activity</string>
    <string name="challenge_progress_view_label">Challenge Progress</string>
    <string name="challenge_progress_before_start_message">No data available. You will be able to see your team’s progress once the challenge has started.</string>
    <string name="dashboard_distance_goal_template">/%1$s %2$s</string>
    <string name="dashboard_steps_goal_template">/%1$s</string>
    <string name="dashboard_fundraising_progress_card_label">Fundraising Progress</string>
    <string name="dashboard_fundraising_progress_before_start_message">No data available. You will be able to see your progress once the challenge has started.</string>
    <string name="dashboard_challenge_completed">Challenge completed</string>
    <string name="dashboard_challenge_remaining_days_template">You have %1$d days remaining!</string>
    <string name="dashboard_challenge_remaining_days_hours_template">You have %1$d days and %2$d hours remaining!</string>
    <string name="dashboard_challenge_remaining_hours_template">You have %1$d hours remaining!</string>
    <string name="fundraising_invite_label">Invite supporters to pledge</string>
    <string name="challenge_fundraising_progress_before_start_message">Did you know your friends and family can support you by donating to the cause?</string>
    <string name="invite_supporters_message">Get sponsored by your friends. When your friends sign up to support you, you will raise money for every mile you move. Proceeds will be donated to AKF.</string>
    <string name="invite_supporter_template_1">Want to join me in supporting a good cause? I am participating in Aga Khan Foundation \(AKF\)\'s Steps4Impact challenge. You can support me by pledging at http://www.akfusa.org/steps4impactpledge\nAll proceeds will be donated to AKF.  Learn about AKF https://www.akfusa.org/ Thank you for your support.</string>
    <string name="invite_supporter_template_2">
        From %1$s to %2$s, I will be embarking on %3$s with help of Aga Khan Foundation \(AKF\) Steps 4 Impact Challenge.
        I have set the goal to walk %4$d miles in %5$d weeks.
        I need your support for a worthy cause by pledging at http://www.akfusa.org/steps4impactpledge
        and make the donation at the end of challenge only when I achieve the goals.
        All proceeds will be donated to AKF.  Learn about AKF https://www.akfusa.org Thank you for your support.
    </string>
    <string name="team_name_hint_text">Name your team (required)</string>
    <string name="team_name_constraint_hint">Minimum length 6 characters</string>
    <string name="delete_team_title">Delete Team?</string>
    <string name="delete_team_message">This will remove all data and team members from the challenge.</string>
    <string name="cancel_delete_team_button_text">Cancel</string>
    <string name="delete_team_button">Delete Team</string>
    <string name="settings_tester_password_label">Enter password to switch server:</string>
    <string name="switch_server_lable">Switch Server</string>
    <string name="connected_to_prod_server">Connected to Prod Server</string>
    <string name="team_name_edit_title">Edit Team Name</string>
</resources>