<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white_1"
    android:padding="@dimen/spacing_big"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_team_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_team_title"
        android:gravity="center"
        android:textAppearance="?textAppearanceHeadline6"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/delete_team_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_team_message"
        android:gravity="center"
        android:lineSpacingMultiplier="@dimen/body_line_spacing_1"
        android:textAppearance="?textAppearanceBody1"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_team_title"/>

    <Button
        android:id="@+id/cancel_delete_team_button"
        style="@style/Widget.WCF.Button.Secondary"
        android:layout_width="@dimen/button_width_medium"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big"
        android:gravity="center"
        android:text="@string/cancel_delete_team_button_text"
        android:textAppearance="@style/TextAppearance.WCF.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_team_message" />

    <Button
        android:id="@+id/delete_team_button"
        style="@style/Widget.WCF.Button.Red"
        android:layout_width="@dimen/button_width_medium"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"
        android:text="@string/delete_team_button"
        android:textAppearance="@style/TextAppearance.WCF.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_delete_team_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
