<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/spacing_normal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/current_connection_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.WCF.Headline6"
        android:gravity="center"
        tools:text="@string/connected_to_prod_server"/>

    <TextView
        android:id="@+id/tester_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_extra_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_connection_message"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.WCF.Subtitle1.Medium.Bold"
        android:text="@string/settings_tester_password_label"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tester_password_label"
        android:layout_marginTop="@dimen/spacing_normal"
        android:textAppearance="@style/TextAppearance.WCF.Headline6"
        android:gravity="center"
        android:inputType="textPassword"
        android:lines="1"
        android:foreground="?selectableItemBackground"
        tools:text="TEST123"/>

    <Button
        android:id="@+id/ok"
        style="@style/Widget.WCF.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/switch_server_lable"
        android:textAppearance="@style/TextAppearance.WCF.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.WCF.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.WCF.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ok" />

</androidx.constraintlayout.widget.ConstraintLayout>