<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/spacing_normal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/participant_miles_label"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.WCF.Headline6"
        android:text="@string/settings_participant_miles_label"/>

    <EditText
        android:id="@+id/participant_committed_miles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/participant_miles_units"
        app:layout_constraintTop_toBottomOf="@+id/participant_miles_label"
        android:layout_marginTop="@dimen/spacing_large"
        android:textAppearance="@style/TextAppearance.WCF.Headline6"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="4"
        android:lines="1"
        android:foreground="?selectableItemBackground"
        tools:text="500"/>

    <TextView
        android:id="@+id/participant_miles_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/participant_committed_miles"
        app:layout_constraintBaseline_toBaselineOf="@id/participant_committed_miles"
        android:textAppearance="@style/TextAppearance.WCF.Headline6"
        android:gravity="right"
        android:text="@string/settings_participant_miles_units_label"/>

    <Button
        android:id="@+id/save"
        style="@style/Widget.WCF.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.WCF.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participant_committed_miles" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.WCF.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.WCF.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

</androidx.constraintlayout.widget.ConstraintLayout>